<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ActivityRecyclerViewFragment</string>
    <string name="skip">Skip</string>
    <string name="start_to_invest">Start to invest</string>
    <string name="for_your_future">for your future!</string>
    <string name="ex_totam_praesentium_incidunt_aut">Ex totam praesentium incidunt aut.</string>
    <string name="next">NEXT</string>
    <string name="todo">TODO</string>
    <string name="to_achieve_success">to achieve success!</string>
    <string name="follow_our_tips">Follow our tips</string>
    <string name="keep_your">Keep your</string>
    <string name="investment_safe">investment safe</string>
    <string name="start">START</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="tradix">TRADIX</string>
    <string name="the_future_of_trading">The future of trading</string>
    <string name="create_a_free_account">Create a free account</string>
    <string name="we_have_sent_you_an">We have sent you an</string>
    <string name="email_to_change_your">email to change your</string>
    <string name="passwords">password</string>
    <string name="resend_email">Resend Email</string>
    <string name="wait_30_seconds_before_sending_it">Wait 30 seconds before sending it</string>
    <string name="yay_your_password_has_been">Yay! Your password has been</string>
    <string name="changed">changed!</string>
    <string name="you_can_now_log_into_your_account">You can now log into your account</string>
    <string name="with_the_new_password">with the new password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="down_jone">DOWN JONE</string>
    <string name="nyse">NYSE</string>
    <string name="_10_44_45">10:44:45</string>
    <string name="index">Index</string>
    <string name="_20_047_50">20.047,50</string>
    <string name="_203_1_04">+203 (+1,04%)</string>
    <string name="load_more">Load More</string>
    <string name="neo_index">NEO INDEX</string>
    <string name="usd">USD</string>
    <string name="binance">Binance</string>
    <string name="rate">RATE</string>
    <string name="_21_1637">21,1637</string>
    <string name="_17_00_33_real_time">17:00:33 Real time</string>
    <string name="today_change">TODAY CHANGE</string>
    <string name="_2_0634_9_44">+2,0634 (+9,44%)</string>
    <string name="neo_chart">NEO Chart</string>
    <string name="buy_or_sell_for_neo">Buy or Sell for NEO</string>
    <string name="mkt_capitalization">Mkt Capitalization</string>
    <string name="home">Home</string>
    <string name="coin">Coin</string>
    <string name="news">News</string>
    <string name="customer">Customer</string>
    <string name="general">General</string>
    <string name="technical_section">Technical Section</string>
    <string name="markets">Markets</string>
    <string name="NEWS">NEWS</string>
    <string name="alt_3_87">ALT -3,87%</string>
    <string name="atlanta">Atlanta</string>
    <string name="illum_velit_nam_voluptatum_enim_aut">Illum velit nam voluptatum enim aut</string>
    <string name="ratione_ratione_officiis_totam">ratione ratione officiis totam.</string>
    <string name="mollitia_eum_sint_tempora_ducimus">Mollitia eum sint tempora ducimus</string>
    <string name="_3_sept_2020">3 Sept 2020</string>
    <string name="editorial">EDITORIAL</string>
    <string name="crypto_news">CRYPTO NEWS</string>
    <string name="raw_material">RAW MATERIAL</string>
    <string name="economics">ECONOMICS</string>
    <string name="menu">MENU</string>
    <string name="mary_olson">MARY OLSON</string>
    <string name="alerts">Alerts</string>
    <string name="editorial_news">EDITORIAL NEWS</string>
    <string name="cryptocurrency">CRYPTOCURRENCY</string>
    <string name="predictions">Predictions</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="tools">Tools</string>
    <string name="select_stocks">Select Stocks</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="webinar">Webinar</string>
    <string name="best_broker">Best Broker</string>
    <string name="index_h">INDEX</string>
    <string name="shares">SHARES</string>
    <string name="currencies">CURRENCIES</string>
    <string name="futures">FUTURES</string>
    <string name="crypto">CRYPTO</string>
    <string name="_02_set_2020">02 Set 2020</string>
    <string name="what_is_the_future_of_cryptocurrencies">What is the future of cryptocurrencies?</string>
    <string name="text1">Rem deserunt voluptatem sapiente.Quod sint officiis quae magnam. Qui eaque atque quia. Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas. Ullam voluptatem reprehenderit ea commodi. Doloremque autem praesentium qui harum quia sunt voluptatem eius at.Voluptates voluptatem eaque et voluptas maxime molestiae et. Et saepe perferendis ut quidem et est. Et iusto ut nostrum delectus. Libero et modi placeat labore sit et quaerat sed. Dolorem libero earum ipsum illum nemo.</string>
    <string name="text2">Rem deserunt voluptatem sapiente. Quod sint officiis quae magnam. Qui eaque atque quia. Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas. Ullam voluptatem reprehenderit ea commodi. Doloremque autem</string>
    <string name="charts">Charts</string>
</resources>