<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.NewsFragment"
    tools:ignore="ExtraText">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_componente_6_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons_8_expand_arrow"
        android:layout_marginTop="48dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/news"
        style="@style/TextEmail"
        android:textColor="#121212"
        android:text="@string/editorial_news"
        android:layout_marginTop="45dp"
        android:layout_marginStart="19dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"/>
    <ScrollView
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:background="@drawable/news_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_marginStart="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TxtNew"
                    android:background="@drawable/txt_new_background"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="6dp"
                    android:text="@string/editorial"/>
                <TextView
                    android:layout_marginStart="9dp"
                    style="@style/TxtNew"
                    android:text="@string/crypto_news"/>
                <TextView
                    android:layout_marginStart="17dp"
                    style="@style/TxtNew"
                    android:text="@string/raw_material"/>
                <TextView
                    android:layout_marginStart="17dp"
                    style="@style/TxtNew"
                    android:text="@string/economics"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/img_main"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="81.5dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/raggruppa_16"
                tools:ignore="ContentDescription" />
            <ImageView
                android:id="@+id/calendar"
                android:layout_marginTop="46.5dp"
                android:layout_below="@id/img_main"
                android:layout_marginStart="27dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons_8_calendar" />
            <TextView
                android:layout_below="@id/calendar"
                android:layout_marginTop="9dp"
                android:layout_marginStart="27dp"
                style="@style/DescriptionNew"
                android:textSize="12sp"
                android:text="@string/_02_set_2020"/>
            <TextView
                android:id="@+id/crypto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:textSize="9sp"
                android:textColor="#0a0909"
                android:text="@string/cryptocurrency"
                android:paddingTop="3dp"
                android:paddingBottom="1dp"
                android:paddingStart="4.7dp"
                android:paddingEnd="4.3dp"
                android:layout_below="@+id/img_main"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="31dp"
                android:layout_marginTop="22.5dp"
                tools:ignore="SmallSp"
                android:background="@drawable/txt_crpy_background"/>
            <TextView
                android:id="@+id/title"
                android:layout_below="@id/crypto"
                android:gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginStart="148dp"
                android:layout_marginEnd="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="4dp"
                android:fontFamily="@font/raleway_black"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:background="#6021ea"
                android:text="@string/what_is_the_future_of_cryptocurrencies"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginBottom="200dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="43dp"
                tools:ignore="NestedScrolling">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="#000000"
                        android:text="@string/text1"/>
                    <TextView
                        android:layout_marginTop="32dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="13sp"
                        android:text="@string/text2"/>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>