<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_componente_7_3"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="126dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="95.5dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            style="@style/TextOnBoarding"
            android:layout_gravity="center"
            android:textColor="#2b2828"
            android:textSize="40sp"
            android:text="@string/tradix"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:textSize="22sp"
            android:textColor="#3c3c3c"
            android:text="@string/the_future_of_trading"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_coin"
        android:layout_marginTop="137dp"
        android:layout_marginBottom="129.2dp"
        android:layout_marginStart="265.1dp"
        android:layout_marginEnd="83.7dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/pixel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="199.4dp"
        android:layout_marginBottom="330.4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_pixeltrue_newsletter"/>
    
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20.6dp"
        android:layout_marginBottom="232dp"
        android:layout_marginStart="76.2dp"
        android:layout_marginEnd="70.8dp"
        app:layout_constraintTop_toBottomOf="@id/pixel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            style="@style/TextEmail"
            android:text="@string/we_have_sent_you_an"/>
        <TextView
            style="@style/TextEmail"
            android:text="@string/email_to_change_your"/>
        <TextView
            style="@style/TextEmail"
            android:text="@string/passwords"/>
    </LinearLayout>

    <Button
        android:id="@+id/resendEmail"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="124dp"
        android:layout_marginStart="62.5dp"
        android:layout_marginEnd="62.5dp"
        android:text="@string/resend_email"
        android:textColor="#ffffff"
        android:fontFamily="@font/lato_black"
        android:textSize="14sp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_light"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="#3e3e3e"
        android:text="@string/wait_30_seconds_before_sending_it"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="87dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintTop_toBottomOf="@id/resendEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>