<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/ic_illustration"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="567dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        style="@style/TextOnBoarding"
        android:textSize="22sp"
        android:textColor="#656565"
        android:text="@string/welcome"
        android:layout_marginTop="324.5dp"
        android:layout_marginBottom="22.5dp"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="132dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_componente_7_1"
        android:scaleType="fitXY"
        android:layout_marginTop="130.5dp"
        android:layout_marginBottom="300.5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="183.5dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="97.5dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            style="@style/TextOnBoarding"
            android:layout_gravity="center"
            android:textColor="#2b2828"
            android:textSize="40sp"
            android:text="@string/tradix"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:textSize="22sp"
            android:textColor="#171717"
            android:text="@string/the_future_of_trading"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_coin"
        android:layout_marginTop="196.5dp"
        android:layout_marginBottom="127.5dp"
        android:layout_marginStart="265.1dp"
        android:layout_marginEnd="82.9dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="62dp"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="249dp"
                android:layout_height="51dp"
                android:background="@drawable/edit_text_background"
                style="@style/Skip"
                android:fontFamily="@font/lato_light"
                android:paddingStart="22.5dp"
                android:hint="@string/e_mail"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="249dp"
                android:layout_height="51dp"
                android:background="@drawable/edit_text_background"
                style="@style/Skip"
                android:fontFamily="@font/lato_light"
                android:paddingStart="22.5dp"
                android:hint="@string/password"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="249dp"
            android:layout_height="51dp"
            android:layout_marginTop="14.5dp"
            android:fontFamily="@font/lato_black"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:text="@string/login"
            android:background="@drawable/btn_background"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="9dp"
                style="@style/Skip"
                android:textColor="#9d9d9d"
                android:text="@string/forgot_password"/>

            <TextView
                android:layout_marginStart="72dp"
                android:fontFamily="@font/lato_bold"
                style="@style/Skip"
                android:textColor="#9d9d9d"
                android:text="@string/sign_up"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>